Refactored logic from using JSON to directly modifying Text objects